Grammar and spelling checks completed

--- a/beers.html
+++ b/beers.html
@@ -132,7 +132,7 @@
                     <img src="https://www.eebriatrade.com/media/products/21455/20191008102232501/450x450.jpg" alt="Che Guava Beer" class="beer-image">
                     <div class="overlay">
                         <h5 class="headings-light">Che Guava</h5>
-                        <p class="content-text-light"><small>This Gluten free lager delivers a tropical explosion of guava. With aromas of tropical fruit, citrus and champagne, this brut-style lager finishes dry yet very refreshing. </small></p>
+                        <p class="content-text-light"><small>This Gluten-free lager delivers a tropical explosion of guava. With aromas of tropical fruit, citrus, and champagne, this brut-style lager finishes dry yet very refreshing. </small></p>
                         <p class="content-text-light"><small>3.5% abv | 500ml</small></p>
                         <img src="https://www.williamsbrosbrew.com/assets/static/img/wb-logo-meta.png" alt="Williams Bro. Logo" class="beer-image-logo">
                     </div>
@@ -159,7 +159,7 @@
                     <img src="https://ecom-su-static-prod.wtrecom.com/images/products/11/LN_412015_BP_11.jpg" alt="Modern Helles Lager" class="beer-image">
                     <div class="overlay">
                         <h5 class="headings-light">Modern Helles Lager</h5>
-                        <p class="content-text-light"><small>A cold fermented German Lager delivery grassy and cereal notes. Made using malted barley, Bavarian Hops, wheats, oats, water, yeast and nothing else. </small></p>
+                        <p class="content-text-light"><small>A cold fermented German Lager delivery grassy and cereal notes. Made using malted barley, Bavarian Hops, wheat, oats, water, yeast and nothing else. </small></p>
                         <p class="content-text-light"><small>4.1% abv | 330ml</small></p>
                         <img src="https://www.tempestbrewco.com/sites/tempest/images/og-image.jpg" alt="Tempest Brewery Logo" class="beer-image-logo">
                     </div>
@@ -168,7 +168,7 @@
                     <img src="https://www.eebriatrade.com/media/products/20133/20200917105453914/450x450.jpg" alt="Fierce Pilsner" class="beer-image">
                     <div class="overlay">
                         <h5 class="headings-light">Fierce Pilsner</h5>
-                        <p class="content-text-light"><small>Fierce's classic lager style beer. Cold fermented and matured slowly for a crisp, clean full flavour. This beer is also Gluten free and suitable for vegans.</small></p>
+                        <p class="content-text-light"><small>Fierce's classic lager style beer. Cold fermented and matured slowly for a crisp, clean full flavour. This beer is also Gluten-free and suitable for vegans.</small></p>
                         <p class="content-text-light"><small>4.2% abv | 440ml</small></p>
                         <img src="https://www.fiercebeer.com/uploads/images/cms/gallery/1557998970FierceBreweryExterior004.jpg" alt="Fierce Brewery Logo" class="beer-image-logo">
                     </div>
@@ -186,7 +186,7 @@
                     <img src="https://www.cromartybrewing.com/media/products/LAGER_330_White.jpg" alt="Cromarty Lager" class="beer-image">
                     <div class="overlay">
                         <h5 class="headings-light">Cromarty Lager</h5>
-                        <p class="content-text-light"><small>Cromarty's take on a Munich Helles style lager. Its crisp, its clean and its ridiculously refreshing - the perfect thirst quencher.</small></p>
+                        <p class="content-text-light"><small>Cromarty's take on a Munich Helles style lager. It's crisp, it's clean and it's ridiculously refreshing - the perfect thirst quencher.</small></p>
                         <p class="content-text-light"><small>4.4% abv | 330ml</small></p>
                         <img src="https://pbs.twimg.com/profile_images/1077548755052888070/Kf-RZhaU.jpg" alt="Cromarty Brewery Logo" class="beer-image-logo">
                     </div>
@@ -195,7 +195,7 @@
                     <img src="https://www.eebriatrade.com/media/products/26783/20200423134011306/450x450.jpg" alt="Hopo Lager" class="beer-image">
                     <div class="overlay">
                         <h5 class="headings-light">Hopo Lager</h5>
-                        <p class="content-text-light"><small>A proper full bodied lager, brewed with German yeast to deliver a full on citrus flavour. Perle and Waimea Hops make this a hoppy and zesty lager. </small></p>
+                        <p class="content-text-light"><small>A proper full bodied-lager, brewed with German yeast to deliver a full-on citrus flavour. Perle and Waimea Hops make this a hoppy and zesty lager. </small></p>
                         <p class="content-text-light"><small>4.5% abv | 500ml</small></p>
                         <img src="https://untappd.akamaized.net/site/brewery_logos_hd/brewery-260_40f37_hd.jpeg" alt="Broughton Brewery Logo" class="beer-image-logo">
                     </div>
@@ -213,7 +213,7 @@
                     <img src="https://images.squarespace-cdn.com/content/5743328322482e6a525abbcc/1584437799524-13UR2G5G49NZOIM4ZGVH/peloton-01.jpg?format=1500w&content-type=image%2Fjpeg" alt="Peloton Lager" class="beer-image">
                     <div class="overlay">
                         <h5 class="headings-light">Peloton Lager</h5>
-                        <p class="content-text-light"><small>Peloton is a classic pilsner, brewed to style, crisp with a noble bitterness. Produced using Scottish Pilsner malt, german hops and time. </small></p>
+                        <p class="content-text-light"><small>Peloton is a classic pilsner, brewed to style, crisp with a noble bitterness. Produced using Scottish Pilsner malt, German hops and time. </small></p>
                         <p class="content-text-light"><small>4.1% abv | 330ml</small></p>
                         <img src="https://pbs.twimg.com/profile_images/1034191072375791622/s2G5sR8h_400x400.jpg" alt="Six Degrees North Logo" class="beer-image-logo">
                     </div>
@@ -255,7 +255,7 @@
                     <img src="https://www.wine-searcher.com/images/labels/70/86/the-orkney-brewery-northern-light-pale-ale-10357086.jpg" alt="Northern Light Ale" class="beer-image">
                     <div class="overlay">
                         <h5 class="headings-light">Northern Light Ale</h5>
-                        <p class="content-text-light"><small>Citrus flavours combine with hint of fresh bread: giving way to spice, citrus and apricot hoppiness. It has a delicious crisp hop character without being overly aggressive.</small></p>
+                        <p class="content-text-light"><small>Citrus flavours combined with a hint of fresh bread: giving way to spice, citrus and apricot hoppiness. It has a delicious crisp hop character without being overly aggressive.</small></p>
                         <p class="content-text-light"><small>4% abv | 500ml</small></p>
                         <img src="https://brewerydb-images.s3.amazonaws.com/brewery/z9kt21/upload_VpFoxz-squareLarge.png" alt="Orkney Brewery Logo" class="beer-image-logo">
                     </div>
@@ -264,7 +264,7 @@
                     <img src="https://d2kok6abjghpv5.cloudfront.net/version-5/media/catalog/product/cache/1/image/650x/040ec09b1e35df139433887a97daa66f/p/1/p1030228_-_copy.jpg" alt="Isle of Arran Ale" class="beer-image">
                     <div class="overlay">
                         <h5 class="headings-light">Isle of Arran Blonde</h5>
-                        <p class="content-text-light"><small>A pale golden beer, clear tasting in a continental style. Floral hop and new mown grass aroma, with citric fruit and a well balanced finish with good hop character.</small></p>
+                        <p class="content-text-light"><small>A pale golden beer, clear tasting in a continental style. Floral hop and new-mown grass aroma, with citric fruit and a well-balanced finish with good hop character.</small></p>
                         <p class="content-text-light"><small>5% abv | 500ml</small></p>
                         <img src="https://pbs.twimg.com/profile_images/520147861850165248/NEwNE84p_400x400.jpeg" alt="Arran Brewery Logo" class="beer-image-logo">
                     </div>
@@ -273,7 +273,7 @@
                     <img src="https://www.thecressco.co.uk/imagecache/07757710-9e7b-4120-924d-a91f00ec1893_800x800.jpg" alt="Light Ness Ale" class="beer-image">
                     <div class="overlay">
                         <h5 class="headings-light">Light Ness</h5>
-                        <p class="content-text-light"><small>A delicate, fruity ale with Galaxy, Columbus and Citra hops. Straw gold in colour, with aromas of apple & citurs, leading to a fresh, pithy tangerine bitterness. </small></p>
+                        <p class="content-text-light"><small>A delicate, fruity ale with Galaxy, Columbus and Citra hops. Straw gold in colour, with aromas of apple & citrus, leading to a fresh, pithy tangerine bitterness. </small></p>
                         <p class="content-text-light"><small>3.8% abv | 500ml</small></p>
                         <img src="https://drthebeerbloguk.files.wordpress.com/2018/02/loch-ness-logo.png?w=450" alt="Loch Ness Brewery Logo" class="beer-image-logo">
                     </div>
@@ -336,7 +336,7 @@
                     <img src="https://images.squarespace-cdn.com/content/v1/5743328322482e6a525abbcc/1552488937191-UMMDMJWS77856UKMYNFH/ke17ZwdGBToddI8pDm48kLwj3d5FoMQAiNT4Uw7VKeF7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z4YTzHvnKhyp6Da-NYroOW3rv7sVmavAApj1cuSnuUyXzqqXjS3CfNDSuuf31e0tVEygdIEUeU3YOIN93969xnEnK2RQAEb4Ox1wlZQJ51HaT6WcYmNGe_WPY_pAIl2T9w/hopocrisy-01.jpg?format=2500w" alt="Hopocrisy Ale" class="beer-image">
                     <div class="overlay">
                         <h5 class="headings-light">Hopocrisy Pale Ale</h5>
-                        <p class="content-text-light"><small>Hopocrisy has been dry hopped with ekuanot and is packed with super fresh aromas. The palate is full of apple and apricot notes, balanced with a floral finish. </small></p>
+                        <p class="content-text-light"><small>Hopocrisy has been dry-hopped with ekuanot and is packed with super fresh aromas. The palate is full of apple and apricot notes, balanced with a floral finish. </small></p>
                         <p class="content-text-light"><small>4.6% abv | 330ml</small></p>
                         <img src="https://pbs.twimg.com/profile_images/1034191072375791622/s2G5sR8h_400x400.jpg" alt="Six Degrees North Logo" class="beer-image-logo">
                     </div>
@@ -354,7 +354,7 @@
                     <img src="https://assets.sainsburys-groceries.co.uk/gol/7997962/1/640x640.jpg" alt="Tin Man Tropical IPA" class="beer-image">
                     <div class="overlay">
                         <h5 class="headings-light">Tin Man Tropical IPA</h5>
-                        <p class="content-text-light"><small>This tribal IPA is pale & powerful with heavy hitting tropical notes. Brewed with our fruitiest hops, set against a slightly sweet Vienna malt backbone.</small></p>
+                        <p class="content-text-light"><small>This tribal IPA is pale & powerful with heavy-hitting tropical notes. Brewed with our fruitiest hops, set against a slightly sweet Vienna malt backbone.</small></p>
                         <p class="content-text-light"><small>5.5% abv | 500ml</small></p>
                         <img src="https://www.williamsbrosbrew.com/assets/static/img/wb-logo-meta.png" alt="Williams Brothers Logo" class="beer-image-logo">
                     </div>
@@ -423,7 +423,7 @@
                     <img src="https://www.eebria.com/media/products/3154/20180219160315455/450x450.jpg" alt="Mexicake Stout" class="beer-image">
                     <div class="overlay">
                         <h5 class="headings-light">Mexicake</h5>
-                        <p class="content-text-light"><small>A homage to Mexico, Mexicake is a rich, boozy imperial stout infused with vanilla beans, cocoa, cinnamon, chipotle and mulato chiles</small></p>
+                        <p class="content-text-light"><small>A homage to Mexico, Mexicake is a rich, boozy imperial stout infused with vanilla beans, cocoa, cinnamon, chipotle and Mulato chiles.</small></p>
                         <p class="content-text-light"><small>12.4% abv | 330ml</small></p>
                         <img src="https://www.tempestbrewco.com/sites/tempest/images/og-image.jpg" alt="Tempest Brewery Logo" class="beer-image-logo">
                     </div>
@@ -441,7 +441,7 @@
                     <img src="https://www.eebriatrade.com/media/products/15180/20190116152401308/450x450.jpg" alt="Night Shift Black IPA" class="beer-image">
                     <div class="overlay">
                         <h5 class="headings-light">Night Shift Black IPA</h5>
-                        <p class="content-text-light"><small>When the Day Shift is done, the Night Shift takes over. Velvety and smooth with a biting hoppiness of Simcoe & Yellow Sub that guarantees instant pleasure</small></p>
+                        <p class="content-text-light"><small>When the Day Shift is done, the Night Shift takes over. Velvety and smooth with a biting hoppiness of Simcoe & Yellow Sub that guarantees instant pleasure.</small></p>
                         <p class="content-text-light"><small>6.5% abv | 330ml</small></p>
                         <img src="https://www.fiercebeer.com/uploads/images/cms/gallery/1557998970FierceBreweryExterior004.jpg" alt="Fierce Brewery Logo" class="beer-image-logo">
                     </div>
@@ -459,7 +459,7 @@
                     <img src="https://www.cromartybrewing.com/media/products/BHD_330.jpg" alt="Black Hop Down Black IPA" class="beer-image">
                     <div class="overlay">
                         <h5 class="headings-light">Black Hop Down</h5>
-                        <p class="content-text-light"><small>Simcoe, Chinook & Cloumbus hops, wicked malts and some balls to the wall wizardry make this a dark beer light.</small></p>
+                        <p class="content-text-light"><small>Simcoe, Chinook & Columbus hops, wicked malts and some balls to the wall wizardry make this a dark beer light.</small></p>
                         <p class="content-text-light"><small>7.2% abv | 330ml</small></p>
                         <img src="https://pbs.twimg.com/profile_images/1077548755052888070/Kf-RZhaU.jpg" alt="Cromarty Brewery Logo" class="beer-image-logo">
                     </div>
@@ -477,7 +477,7 @@
                     <img src="https://www.royalmilewhiskies.com/pub/media/catalog/product/cache/844013aff778fcf6107f66a3040c735a/b/a/ba1219.jpg" alt="Chew Chew Milk Stout" class="beer-image">
                     <div class="overlay">
                         <h5 class="headings-light">Chew Chew Salted Caramel Milk Stout</h5>
-                        <p class="content-text-light"><small>Primarily a sweet, briney, chewy beer brewed with dark Belgian candi syrup, lactose and sea salt for a moreish dessert beer.</small></p>
+                        <p class="content-text-light"><small>Primarily a sweet, briny, chewy beer brewed with dark Belgian candi syrup, lactose and sea salt for a moreish dessert beer.</small></p>
                         <p class="content-text-light"><small>6% abv | 440ml</small></p>
                         <img src="https://drthebeerbloguk.files.wordpress.com/2017/11/fallen.jpg?w=863" alt="Fallen Brewery Logo" class="beer-image-logo">
                     </div>
