--- a/breweries.html
+++ b/breweries.html
@@ -168,7 +168,7 @@
                         <div class="card-body brew-card-body">
                             <h5 class="headings-light"><strong>Stewart Brewing</strong></h5>
                             <p class="headings-light text-uppercase">Edinburgh</p>
-                            <p class="content-text-light">Edinburgh's original craft brewery founded in 2004, has seen demand soar since their inception meaning they now have a custom built premise which is catered to the public. A visit here with their onsite Taproom is not to be missed.</p>
+                            <p class="content-text-light">Edinburgh's original craft brewery founded in 2004, has seen demand soar since their inception meaning they now have a custom-built premise which is catered to the public. A visit here with their onsite Taproom is not to be missed.</p>
                             <a href="https://www.stewartbrewing.co.uk" target="_blank" class="btn btn-sm card-button headings-dark">Visit Website</a>
                         </div>
                     </div>
@@ -193,7 +193,7 @@
                         <div class="card-body brew-card-body">
                             <h5 class="headings-light"><strong>Fierce</strong></h5>
                             <p class="headings-light text-uppercase">Aberdeen</p>
-                            <p class="content-text-light">Aberdeens first micro-brewery, FIERCE make flavour packed beers of all varieties. With their eye-catching marketing, these beers will turn your fridge into a modern art installation.</p>
+                            <p class="content-text-light">Aberdeens first micro-brewery, FIERCE make flavour-packed beers of all varieties. With their eye-catching marketing, these beers will turn your fridge into a modern art installation.</p>
                             <a href="https://www.fiercebeer.com" target="_blank" class="btn btn-sm card-button headings-dark">Visit Website</a>
                         </div>
                     </div>
@@ -215,7 +215,7 @@
                         <div class="card-body brew-card-body">
                             <h5 class="headings-light"><strong>Black Isle Brewing Co.</strong></h5>
                             <p class="headings-light text-uppercase">Munlochy</p>
-                            <p class="content-text-light">Black Isle founder David Gladwin set out to make world class beer using barley and hops grown on organic farms without the use of destructive chemicals. Today they brew up to 10,000 litres a day, and you can find their beer all over the world.</p>
+                            <p class="content-text-light">Black Isle founder David Gladwin set out to make world-class beer using barley and hops grown on organic farms without the use of destructive chemicals. Today they brew up to 10,000 litres a day, and you can find their beer all over the world.</p>
                             <a href="https://www.blackislebrewery.com" target="_blank" class="btn btn-sm card-button headings-dark">Visit Website</a>
                         </div>
                     </div>
@@ -226,7 +226,7 @@
                         <div class="card-body brew-card-body">
                             <h5 class="headings-light"><strong>Cromarty Brewing Co.</strong></h5>
                             <p class="headings-light text-uppercase">Davidston | Cromarty</p>
-                            <p class="content-text-light">Founding brewer Craig began the art of beer making in student accomodation and flat basements. Since then he has re-established the Cromarty brewery delivering completely non-pasteurised or filtered beer packed with flavour.</p>
+                            <p class="content-text-light">Founding brewer Craig began the art of beer making in student accommodation and flat basements. Since then he has re-established the Cromarty brewery delivering completely non-pasteurised or filtered beer packed with flavour.</p>
                             <a href="https://www.cromartybrewing.com" target="_blank" class="btn btn-sm card-button headings-dark">Visit Website</a>
                         </div>
                     </div>
@@ -237,7 +237,7 @@
                         <div class="card-body brew-card-body">
                             <h5 class="headings-light"><strong>Six Degrees North</strong></h5>
                             <p class="headings-light text-uppercase">Aberdeen</p>
-                            <p class="content-text-light">Six Degrees North brew classic belgian inspired beers, as well as modern, hop-forward styles. The brewery gets its name from the founders love of Belgian beer culture and tradition - and the brewery is situated Six Degrees North of Brussels.</p>
+                            <p class="content-text-light">Six Degrees North brew classic Belgian inspired beers, as well as modern, hop-forward styles. The brewery gets its name from the founder's love of Belgian beer culture and tradition - and the brewery is situated Six Degrees North of Brussels.</p>
                             <a href="https://www.sixdnorth.co.uk" target="_blank" class="btn btn-sm card-button headings-dark">Visit Website</a>
                         </div>
                     </div>
@@ -331,7 +331,7 @@
                         <div class="card-body brew-card-body">
                             <h5 class="headings-light"><strong>Broughton Ales</strong></h5>
                             <p class="headings-light text-uppercase">Biggar</p>
-                            <p class="content-text-light">Broughton Brewery is Scotland’s original independent brewery, founded in 1979. Since 1979, they have been hand-crafting our award winning range of ales, IPA’s, lagers, stouts and specialist Scottish beers.</p>
+                            <p class="content-text-light">Broughton Brewery is Scotland’s original independent brewery, founded in 1979. Since 1979, they have been hand-crafting our award-winning range of ales, IPA’s, lagers, stouts and specialist Scottish beers.</p>
                             <a href="https://broughtonales.co.uk" target="_blank" class="btn btn-sm card-button headings-dark">Visit Website</a>
                         </div>
                     </div>
