--- a/contact-us.html
+++ b/contact-us.html
@@ -123,9 +123,7 @@
                     </details>
                     <details class="text-center faq-questions">
                         <summary><strong>How will I know when I receive my beer?</strong></summary>
-                        <p>We will email you in advance of every delivery to let you know you're beer is ready to 
-                            sent and what it contains.
-                        </p>
+                        <p>We will email you in advance of every delivery to let you know you're beer is ready to be sent and what it contains.</p>
                     </details>
                     <details class="text-center faq-questions">
                         <summary><strong>Can I change the date my beer is delivered?</strong></summary>
@@ -137,15 +135,15 @@
                     </details>
                     <details class="text-center faq-questions">
                         <summary><strong>How much does delivery cost?</strong></summary>
-                        <p>Nothing. Delivery is included in the cost of your subscription</p>
+                        <p>Nothing. Delivery is included in the cost of your subscription.</p>
                     </details>
                     <details class="text-center faq-questions">
                         <summary><strong>Are there any hidden fees or cancellation costs?</strong></summary>
-                        <p>No. There are no hidden fees, and no additional costs to pause or cancel your subscription</p>
+                        <p>No. There are no hidden fees, and no additional costs to pause or cancel your subscription.</p>
                     </details>
                     <details class="text-center faq-questions">
                         <summary><strong>How do I cancel or pause my subscription?</strong></summary>
-                        <p>Simply fill out the enquiry form letting us know how long you wish your subscription to be paused for, or if you wish to cancel. Alternatively give us a call. We will send email confirmation of any changes made to your subscription.</p>
+                        <p>Simply fill out the enquiry form letting us know how long you wish your subscription to be paused for, or if you wish to cancel. Alternatively, give us a call. We will send email confirmation of any changes made to your subscription.</p>
                     </details>
                 </div>
 
