--- a/crates.html
+++ b/crates.html
@@ -101,7 +101,7 @@
             <div class="row">
                 <div class="col-12 text-center">
                     <h2 class="headings-dark headings">Choose Your Crate!</h2>
-                    <p class="content-text-dark">Whether you love to get your hands on new releases, or enjoy getting fresh beer every month, Tartan Taps has got your back.</p>
+                    <p class="content-text-dark">Whether you love to get your hands on new releases or enjoy getting fresh beer every month, Tartan Taps has got your back.</p>
                     <p class="content-text-dark">Don't know what beer to try next? Let us handle it.</p>
                     <p class="content-text-dark"><small>Click the icon for further information.  </small><a data-toggle="modal" data-target="#addInfoModal"><i class="fas fa-info-circle" aria-hidden="true"></i></a></p>           
                 </div>
