--- a/beers.html
+++ b/beers.html
@@ -78,9 +78,9 @@
                     <a class="nav-link dropdown-toggle active" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Beers</a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="beers.html">All Beers</a>
-                        <a class="dropdown-item" href="/beers.html#lagers-pilsners">Lagers & Pilsners</a>
-                        <a class="dropdown-item" href="/beers.html#ipa-ale">IPA's & Pale Ales</a>
-                        <a class="dropdown-item" href="/beers.html#stouts-porters">Stouts & Porters</a>
+                        <a class="dropdown-item" href="beers.html#lagers-pilsners">Lagers & Pilsners</a>
+                        <a class="dropdown-item" href="beers.html#ipa-ale">IPA's & Pale Ales</a>
+                        <a class="dropdown-item" href="beers.html#stouts-porters">Stouts & Porters</a>
                     </div>
                 </li> 
                 <li class="nav-item">
