--- a/beers.html
+++ b/beers.html
@@ -552,11 +552,11 @@
         </div>
     </footer>
     <!-- Sign Up Modal from Bootstrap -->
-    <div class="modal fade" id="signUpModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="signUpModal" tabindex="-1" role="dialog" aria-labelledby="signUp" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header headings-dark">
-                    <h5 class="modal-title" id="exampleModalLabel">Sign In / Sign Up</h5>
+                    <h5 class="modal-title" id="signUp">Sign In / Sign Up</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                     </button>
