blue outline on modal resolved

--- a/beers.html
+++ b/beers.html
@@ -55,7 +55,7 @@
 
                 <!-- Sign In/Sign Up Logo Row -->
                 <div class="col-12 col-sm-12 col-md-4 d-none d-md-block text-right">
-                    <a class="no-underline" data-toggle="modal" href="#signUpModal">
+                    <a class="no-underline remove-outline" data-toggle="modal" href="#signUpModal">
                         <h4 class="headings-logo headings-light">Sign In/Sign Up</h4>
                     </a>
                 </div> 
@@ -544,7 +544,7 @@
             </div>
             <div class="col-12 col-sm-6 col-md-4 footer-menu">
                 <h4 class="footer-headings headings-light">Sign In/Sign Up</h4>
-                    <a data-toggle="modal" href="#signUpModal">
+                    <a class="remove-outline" data-toggle="modal" href="#signUpModal">
                         <i class="fas fa-beer" id="beer-sign" aria-hidden="true"></i>
                         <span class="sr-only">Beer Sign Up</span>
                     </a>
