outline removed from FAQ's

--- a/beers.html
+++ b/beers.html
@@ -496,7 +496,7 @@
                     <div class="overlay">
                         <h5 class="headings-light">Dark Days</h5>
                         <p class="content-text-light"><small>Fermented in whisky barrels, Dark Days is an Imperial Stout with aromas of peaches and nectarines, which subside to caramel, sultanas and toffee in the finish.</small></p>
-                        <p class="content-text-light"><small>8.1% abv </small></p>
+                        <p class="content-text-light"><small>8.1% abv | 330ml</small></p>
                         <img src="https://pbs.twimg.com/profile_images/1034191072375791622/s2G5sR8h_400x400.jpg" alt="Six Degrees North Logo" class="beer-image-logo">
                     </div>
                 </div>
