--- a/contact-us.html
+++ b/contact-us.html
@@ -118,31 +118,31 @@
                     <p class="text-center"><small>Click on questions to see the answers.</small></p>
                     <br>
                     <details class="text-center faq-questions">
-                        <summary class="content-text-dark"><strong>How often do I receive a crate?</strong></summary>
+                        <summary class="remove-outline"><strong>How often do I receive a crate?</strong></summary>
                         <p>A new crate will be sent every month.</p>
                     </details>
                     <details class="text-center faq-questions">
-                        <summary><strong>How will I know when I receive my beer?</strong></summary>
+                        <summary class="remove-outline"><strong>How will I know when I receive my beer?</strong></summary>
                         <p>We will email you in advance of every delivery to let you know you're beer is ready to be sent and what it contains.</p>
                     </details>
                     <details class="text-center faq-questions">
-                        <summary><strong>Can I change the date my beer is delivered?</strong></summary>
+                        <summary class="remove-outline"><strong>Can I change the date my beer is delivered?</strong></summary>
                         <p>Yes. You can contact us anytime to change the date of delivery, prior to the cut-off date stated in the advance email. </p>
                     </details>
                     <details class="text-center faq-questions">
-                        <summary><strong>Can I change the crate size?</strong></summary>
+                        <summary class="remove-outline"><strong>Can I change the crate size?</strong></summary>
                         <p>Yes. You can contact us anytime to change the amount of beers you receive, prior to the cut-off date stated in the advance email. </p>
                     </details>
                     <details class="text-center faq-questions">
-                        <summary><strong>How much does delivery cost?</strong></summary>
+                        <summary class="remove-outline"><strong>How much does delivery cost?</strong></summary>
                         <p>Nothing. Delivery is included in the cost of your subscription.</p>
                     </details>
                     <details class="text-center faq-questions">
-                        <summary><strong>Are there any hidden fees or cancellation costs?</strong></summary>
+                        <summary class="remove-outline"><strong>Are there any hidden fees or cancellation costs?</strong></summary>
                         <p>No. There are no hidden fees, and no additional costs to pause or cancel your subscription.</p>
                     </details>
                     <details class="text-center faq-questions">
-                        <summary><strong>How do I cancel or pause my subscription?</strong></summary>
+                        <summary class="remove-outline"><strong>How do I cancel or pause my subscription?</strong></summary>
                         <p>Simply fill out the enquiry form letting us know how long you wish your subscription to be paused for, or if you wish to cancel. Alternatively, give us a call. We will send email confirmation of any changes made to your subscription.</p>
                     </details>
                 </div>
