code accreditation added to README.md & contact-us.html

--- a/contact-us.html
+++ b/contact-us.html
@@ -117,6 +117,7 @@
                     <h2 class="faq-headings headings-dark text-center">FAQ's</h2>
                     <p class="text-center"><small>Click on questions to see the answers.</small></p>
                     <br>
+                    <!-- Details / summary dropdown code taken from W3 Schools -->
                     <details class="text-center faq-questions">
                         <summary class="remove-outline"><strong>How often do I receive a crate?</strong></summary>
                         <p>A new crate will be sent every month.</p>
